  are defined in the TM. Also required; f$alli must be true, ismyturn must be true, and scraper 
  must have found i3handle on the i3slider path. The handle will be grabbed and pulled to the 
  extent of slider, and i3button or whatever is defined as alli_but will be depressed.

- Check for enough disk space, when shooting replay frames (min. 10 MB). (TheHighFish)

  
BUG FIXES:
- Perl menu: "Reload" command was active, even when no formula was loaded (Thank you, JumpingFences).
  Same for "Edit" and "Check syntax". Fixed in rev. 283 (TheHighFish)	

- Added an "OnBnClickedOk();" accidentally deleted in rev. 278. (TheHighFish)	

- Formula gets saved under wrong file name (jumpingfences) 	

- OH opens not on top and not in focus (jumpingfences)

- uXactive fix in 1.8.2 is now compatible with activemethod.  (quiqsilver)

- Closed DC/GDI leakages as identified by ZooBoy here: http://www.maxinmontreal.com/forums/viewtopic.php?f=111&t=4398
  (OpenHoldem)

- Version 1.8.2 added this feature: "Added sanity checks around the SWAG action stream - if focus is 
  stolen from the target window during the four SWAG steps, then the final step (confirmation) will 
  not be executed."  This has been added as a setting in this version.  The setting defaults to "Off"
  initially (but will be saved if set), so make sure and select it if you need it 
  (Edit/Preferences/Autoplayer).  (OpenHoldem)
  
  
MAINTENANCE:
- Active and seated scraping now evaluates p first for efficiency.  (quiqsilver)

- As part of the pdiff implementation and tuning, I got tired of updating the table map load/save
  code in two places, and have moved this code to the CTransform class where it belongs.  A great
  deal of code was touched (more than I anticipated), so please test carefully.  (OpenHoldem)


v1.8.2 2008-04-25
NEW STUFF:
- Make CFileDialog open in the most recently accessed directory in the context of 
  file type (.whf, .tm, .dll, .pl) (jumpingfences)
  